--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.9.0",
     "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
