--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
@@ -50,5 +51,4 @@
     ]
   },
   "proxy": "http://localhost:8080"
-  
 }
