--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -14,9 +15,11 @@
     "axios": "^1.9.0",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
