--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
