--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "react-grid-layout": "^1.5.1",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
