--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "@toast-ui/react-calendar": "^2.1.3",
     "axios": "^1.9.0",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
@@ -30,6 +31,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.0"
   },
