--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
