--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@toast-ui/react-calendar": "^2.1.3",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -24,6 +25,7 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
