--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.1.0",
+    "@stomp/stompjs": "^7.1.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -23,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
@@ -36,11 +38,10 @@
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.0",
-    "xlsx": "^0.18.5",
-    "@stomp/stompjs": "^7.0.0",
-    "sockjs-client": "^1.6.1"
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,5 +67,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.32.1",
+    "typescript": "^5.8.3"
+  }
 }
