--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-colorful": "^5.6.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
