--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
@@ -36,6 +37,7 @@
     "react-grid-layout": "^1.5.1",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
