--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://43.201.105.20:8080
+REACT_APP_API_URL=https://api.corepos.store
+REACT_APP_WS_URL=https://api.corepos.store/ws
