--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "recharts": "^2.15.3",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.17",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.0",
     "xlsx": "^0.18.5"
   },
